<resources>
    <string name="app_name">Âme Noire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="herren">Herren</string>
    <string name="damen">Damen</string>
    <string name="elektronik">Elektronik</string>
    <string name="schmuck">Schmuck</string>
    <string name="favoriten">Ihre Favoriten sind aktuell noch leer.</string>
    <string name="register">Registrieren</string>
    <string name="einloggen">Einloggen</string>
    <string name="welcome">Herzlich Willkommen!</string>
    <string name="already_signup"> Bereits registriert?</string>
    <string name="Passwort">Passwort</string>
    <string name="email_adress">E-Mail-Adresse</string>
    <string name="google_login">Weiter mit Google</string>
    <string name="apple_login">Weiter mit Apple</string>
    <string name="noch_keinen_Account">Noch keinen Account?</string>
    <string name="name">Name</string>
    <string name="telefonnummer">Telefonnummer</string>
    <string name="exampleEmail">example@web.de</string>
    <string name="examplePhoneNumber">01234567891</string>
    <string name="exampleName">Jonny Jones</string>
    <string name="welcomeText">Erkunde unsere App, entdecke unsere neusten Kollektionen und finde dein neues Lieblingsoutfit.</string>
    <string name="welcomeSplash">WILLKOMMEN</string>
    <string name="ohneAnmeldung">Registrier dich oder logge dich ein, um zu sehen, was du bereits gespeichert hast.</string>
    <string name="keineSorge">Keine Sorge!</string>
    <string name="hallo">Hallo,</string>
    <string name="leereTasche">In deiner Tasche ist nichts drin.</string>
    <string name="anmeldenFuerCashout">Registrier dich oder logge dich ein, um zu sehen, was du bereits in deiner Tasche hast.</string>
    <string name="noProfil">Deine aktuellen Bestellungen und all deine Angaben erneuern, wann immer du möchtest.</string>
    <string name="animation">articleImageTransition</string>
    <string name="erfolgreichWarenkorb">Artikel wurde erfolgreich in Ihr Warenkorb gelegt</string>
    <string name="bezahlen">BEZAHLEN</string>
    <string name="suche">SUCHE</string>
    <string name="suche1">Suche</string>
    <string name="herren1">HERREN</string>
    <string name="damen1">DAMEN</string>
    <string name="elektronik1">ELEKTRONIK</string>
    <string name="schmuck1">SCHMUCK</string>
    <string name="produkt_details">PRODUKT DETAILS</string>
    <string name="in_den_warenkorb">IN DEN WARENKORB</string>
    <string name="beschreibung">BESCHREIBUNG</string>
    <string name="favoriten2">Favoriten</string>
    <string name="favoriten3">FAVORITEN</string>
    <string name="warenkorb">Warenkorb</string>
    <string name="warenkorb1">WARENKORB</string>
    <string name="warenkorb2">Sie haben aktuell nichts im Warenkorb.</string>
    <string name="profil">Profil</string>
    <string name="bequem">Machs dir bequem…</string>
    <string name="bestellungen">Meine Bestellungen</string>
    <string name="angaben">Meine Angaben</string>
    <string name="zahlungsmethoden">Zahlungsmethoden</string>
    <string name="retouren">Meine Retouren</string>
    <string name="hilfe">Hilfe?</string>
    <string name="ausloggen">Ausloggen</string>
    <string name="artikel">Artikel</string>
    <string name="zuletzt_hinzugefuegt">Zuletzt Hinzugefügt</string>
    <string name="preis_absteigend">Preis absteigend</string>
    <string name="preis_aufsteigend">Preis aufsteigend</string>
    <string name="lieferkosten">(ohne Liferkosten)</string>
    <string name="anzahl">Anzahl:</string>
    <string name="hinzufügen">HINZUFÜGEN</string>
    <string name="berühmte">Angesehene Marken</string>
    <string name="felder">Bitte füllen Sie alle Felder aus!</string>
    <string name="passwort">Das Passwort muss mindestens 6 Zeichen lang sein.</string>
    <string name="registrierung">Registrierung erfolgreich!</string>
    <string name="e_mail">Die E-Mail-Adresse wird bereits verwendet.</string>
    <string name="angemeldet">Erfolgreich Angemeldet!</string>
    <string name="falsche_mail">Die eingegebene E-Mail ist nicht registriert.</string>
    <string name="falsches_passwort">Falsches Passwort!</string>
    <string name="fehler_anmeldung">Fehler bei der Anmeldung. Bitte versuchen Sie es erneut.</string>
    <string name="erfolgreich_ausgeloggt">Sie haben sich erfolgreich ausgeloggt!</string>
    <string name="notLoggedIn">Sie sind nicht angemeldet.</string>
    <string name="erfolgreich_hinzu">Artikel erfolgreich hinzugefügt.</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="nicht_angemeldet">Sie sind nicht Angemeldet!</string>
    <string name="bitte_anmelden">Bitte melden Sie sich erst an, um die Aktion durchzuführen</string>
    <string name="vornname">Vorname</string>
    <string name="adresse_hinzu">Adresse hinzufügen</string>
    <string name="versand">VERSAND OPTIONEN</string>
    <string name="dpd">7.99 € DPD Economy Service</string>
    <string name="zahlungsmethoden1">ZAHLUNGSMETHODEN</string>
    <string name="zwischensumme">Zwischensumme:</string>
    <string name="versandsumme">Versand:</string>
    <string name="checkout">KASSE</string>
    <string name="lieferadresse">LIEFERADRESSE</string>
    <string name="anzeigen">Anzeigen</string>
    <string name="bearbeiten">Bearbeiten</string>
    <string name="versandadresse">VERSAND ADRESSE</string>
    <string name="deutschland">Deutschland</string>
    <string name="meineTasche">MEINE TASCHE</string>
    <string name="erfolgreich">Erfolgreich</string>
    <string name="wirklich_abbrechen">Möchtest du die Bezahlung wirklich abbrechen?</string>
    <string name="bezahlung_abbrechen">Bezahlung abbrechen?</string>
    <string name="alle_felder">Bitte fülle alle Felder aus!</string>
</resources>